Content and lists updated - Updated content on about page - Added now section to about page - Updated list styles (WIP)

--- a/src/about.html
+++ b/src/about.html
@@ -13,10 +13,10 @@ sitemap:
 
     <div class="section__content">
         <div class="grid">
-            <div class="grid__col-12 grid__col-sm-4 grid__col-md-5 align-c">
+            <div class="grid__col-12 grid__col-4-sm grid__col-5-md align-c">
                 <img src="/assets/images/me.jpg" alt="" />
             </div>
-            <div class="grid__col-12 grid__col-sm-8 grid__col-md-7 grid__col--vcentered">
+            <div class="grid__col-12 grid__col-8-sm grid__col-7-md grid__col--vcentered">
                 <h3>Hi, my name is Max.</h3>
                 <p>I&rsquo;m a German based web-developer. Currently <span class="age">28</span> years old and living in the beautiful city of Mainz.</p>
                 <p>Besides programming web-applications I do a lot of other things. You can read more about my hobbies <a href="/hobbies" class="link">over here</a>.</p>
@@ -28,88 +28,39 @@ sitemap:
         </div>
     </div>
 
-    <div class="section__content section__content--wide">
-        <div class="grid ff-sans">
-            <div class="grid__col-6">
-                <h3>Experience</h3>
+    <div class="section__content section__content--narrow">
+        <h3>Now&hellip;</h3>
 
-                <ul class="list list--plus">
-                    <li>
-                        <span class="c-primary">CallOne GmbH</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
-                        <span class="fs-sm">June 2021 - Present</span>
-                    </li>
-                    <li>
-                        <span class="c-primary">matterial GmbH</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
-                        <span class="fs-sm">November 2017 - May 2021</span>
-                    </li>
-                    <li>
-                        <span class="c-primary">Opoloo GbR</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
-                        <span class="fs-sm">August 2013 - Oktober 2017</span>
-                    </li>
-                    <li>
-                        <span class="c-primary">RootconnecT e.K.</span> // <span class="c-primary">IT Trainee</span><br />
-                        <span class="fs-sm">August 2010 - July 2013</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="grid__col-3">
-                <h3>Skills</h3>
-
-                <div class="grid fs-sm" style="--gutter:1px">
-                    <div class="grid__col-6">
-                        <ul class="list">
-                            <li><h4>Knowledge</h4></li>
-                            <li>HTML / HAML</li>
-                            <li>CSS / SASS</li>
-                            <li>Javascript</li>
-                            <li>PHP</li>
-                            <li>MySQL</li>
-                        </ul>
-                    </div>
-                    <div class="grid__col-6">
-                        <ul class="list">
-                            <li><h4>Tools</h4></li>
-                            <li>jQuery</li>
-                            <li>VSCode</li>
-                            <li>Sublime Text</li>
-                            <li>Github</li>
-                            <li>Linux</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__col-3">
-                <h3>Languages</h3>
-                <ul class="list">
-                    <li>German</li>
-                    <li>English</li>
-                    <li>Japanese</li>
-                </ul>
-            </div>
-        </div>
+        <ul>
+            <li>&hellip;reading <a href="{{ now.reading.url | url }}" target="_blank" class="link">{{ now.reading.name }}</a></li>
+            <li>&hellip;listening to <a href="{{ now.listening.url | url }}" target="_blank" class="link now__spotify">{{ now.listening.name }}</a></li>
+            <li>&hellip;watching <a href="{{ now.watching.url | url }}" target="_blank" class="link">{{ now.watching.name}}</a></li>
+            <li>&hellip;in my <a href="#" class="link now__fasting">???</a> window</li><!-- TODO: Link blog post -->
+            <li>&hellip;working for <a href="{{ now.working.url | url }}" target="_blank" class="link">{{ now.working.name }}</a></li>
+        </ul>
     </div>
 
     <div class="section__content section__content--narrow">
         <div class="grid ff-sans">
-            <div class="grid__col-6">
+            <div class="grid__col-12 grid__col-6-sm">
                 <h3>Cool people</h3>
 
-                <ul class="list">
+                <ul>
                     <li>
-                        <a href="https://sirtetris.com" class="link">sirtetris</a> // <span class="c-primary">Tarek</span>
+                        <a href="https://sirtetris.com" class="link">sirtetris</a>&mdash;<span class="c-primary">Tarek</span>
                     </li>
                     <li>
-                        <a href="https://kevingimbel.de" class="link">atarijunge</a> // <span class="c-primary">Kevin</span>
+                        <a href="https://kevingimbel.de" class="link">atarijunge</a>&mdash;<span class="c-primary">Kevin</span>
                     </li>
                     <li>
-                        <a href="https://timpietrusky.com" class="link">NERDDISCO</a> // <span class="c-primary">Tim</span>
+                        <a href="https://timpietrusky.com" class="link">NERDDISCO</a>&mdash;<span class="c-primary">Tim</span>
                     </li>
                     <li>
-                        <a href="https://lucasbonomi.com" class="link">LukyVj</a> // <span class="c-primary">Lucas</span>
+                        <a href="https://lucasbonomi.com" class="link">LukyVj</a>&mdash;<span class="c-primary">Lucas</span>
                     </li>
                 </ul>
             </div>
-            <div class="grid__col-6 grid__col--vcentered">
+            <div class="grid__col-12 grid__col-6-sm grid__col--vcentered">
                 This website is also part of the <a href="https://webring.xxiivv.com/#makkusu-dev" class="link">XXIIVV Webring</a>.<br />
                 <br />
                 &ldquo;This webring is an attempt to inspire artists & developers to build their websites and share traffic amongst each other. The ring welcomes hand-crafted wikis and portfolios.&rdquo;
