--- a/src/cv.html
+++ b/src/cv.html
@@ -18,7 +18,7 @@ title: Curriculum Vitae
 
     <div class="section__content section__content--wide">
         <div class="grid">
-            <div class="grid__col-12 grid__col-sm-4">
+            <div class="grid__col-12 grid__col-4-sm">
                 <h2>Skills</h2>
 
                 <ul class="list ff-sans">
@@ -29,7 +29,7 @@ title: Curriculum Vitae
                     <li>MySQL</li>
                 </ul>
             </div>
-            <div class="grid__col-12 grid__col-sm-4">
+            <div class="grid__col-12 grid__col-4-sm">
                 <h2>Languages</h2>
 
                 <ul class="list ff-sans">
@@ -38,7 +38,7 @@ title: Curriculum Vitae
                     <li>Japanese (A1/A2)</li>
                 </ul>
             </div>
-            <div class="grid__col-12 grid__col-sm-4">
+            <div class="grid__col-12 grid__col-4-sm">
                 <h2>Interests</h2>
 
                 <ul class="list ff-sans">
