--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -3,21 +3,21 @@ title: Hobbies
 layout: base.njk
 ---
 
-<aside class="floating-nav">
-    <ul>
-        <li><a href="#japanese">Japanese</a></li>
-        <li><a href="#magic">Magic</a></li>
-        <li><a href="#programming">Programming</a></li>
-        <li><a href="#speedcubing">Speedcubing</a></li>
-        {# <li><a href="#running">Scuba Diving</a></li> #}
-        {# <li><a href="#running">Running</a></li> #}
-    </ul>
-</aside>
-
 <div class="section">
     <div class="section__content section__content--narrow align-c">
         <h1><a href="/"><span>趣・</span>Hobbies</a></h1>
         <h2>Jack of all&mdash;Ace of none</h2>
+
+        <aside class="floating-nav">
+            <ul>
+                <li><a href="#japanese">Japanese</a></li>
+                <li><a href="#magic">Magic</a></li>
+                <li><a href="#programming">Programming</a></li>
+                <li><a href="#speedcubing">Speedcubing</a></li>
+                {# <li><a href="#running">Scuba Diving</a></li> #}
+                {# <li><a href="#running">Running</a></li> #}
+            </ul>
+        </aside>
     </div>
 
     <div class="section__content">
@@ -34,7 +34,7 @@ layout: base.njk
             <p>If you're interested in learning Japanese or looking for additional help, I compiled a list of other useful information and tools for learning and immersion. Feel free to dig around.</p>
             
             <div class="grid" style="--gutter: 2px;">
-                <div class="grid__col-xs-3">
+                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Websites</h4>
 
                     <ul class="list fs-sm">
@@ -43,7 +43,7 @@ layout: base.njk
                         <li><a href="https://www.wanikani.com/" class="link" target="_blank">WaniKani</a></li>
                     </ul>
                 </div>
-                <div class="grid__col-xs-3">
+                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Tools</h4>
                     
                     <ul class="list fs-sm">
@@ -54,7 +54,7 @@ layout: base.njk
                         <li><a href="https://www.tandem.net/" class="link" target="_blank">Tandem</a></li>
                     </ul>
                 </div>
-                <div class="grid__col-xs-3">
+                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Movies / Series</h4>
 
                     <ul class="list fs-sm">
@@ -62,7 +62,7 @@ layout: base.njk
                         <li><a href="https://www.imdb.com/title/tt7776244/" class="link" target="_blank">Terrace House</a></li>
                     </ul>
                 </div>
-                <div class="grid__col-xs-3">
+                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>YouTube</h4>
 
                     <ul class="list fs-sm">
