Responsive & Content Update - Updated content on about page - Added gutters to grid 12-columns - Added 'hidden' special class to grid columns - Changed blog post content styling - More responsive work on various pages

--- a/src/about.html
+++ b/src/about.html
@@ -33,10 +33,10 @@ sitemap:
 
         <ul>
             <li>&hellip;reading <a href="{{ now.reading.url | url }}" target="_blank" class="link">{{ now.reading.name }}</a></li>
-            <li>&hellip;listening to <a href="{{ now.listening.url | url }}" target="_blank" class="link now__spotify">{{ now.listening.name }}</a></li>
-            <li>&hellip;watching <a href="{{ now.watching.url | url }}" target="_blank" class="link">{{ now.watching.name}}</a></li>
-            <li>&hellip;in my <a href="#" class="link now__fasting">???</a> window</li><!-- TODO: Link blog post -->
-            <li>&hellip;working for <a href="{{ now.working.url | url }}" target="_blank" class="link">{{ now.working.name }}</a></li>
+            <li>&hellip;most listened song <a href="{{ now.listening.url | url }}" target="_blank" class="link now__spotify">{{ now.listening.name }}</a></li>
+            <li>&hellip;most watched show <a href="{{ now.watching.url | url }}" target="_blank" class="link">{{ now.watching.name}}</a></li>
+            <li>&hellip;in my <a href="#" class="link now__fasting" title="Blog post about this coming soon">???</a> window</li><!-- TODO: Link blog post -->
+            <li>&hellip;working for <a href="{{ now.working.url | url }}" target="_blank" class="link" rel="noreferrer nofollow">{{ now.working.name }}</a></li>
         </ul>
     </div>
 
