--- a/src/blog.html
+++ b/src/blog.html
@@ -29,7 +29,7 @@ sitemap:
         <div class="posts">
             {%- for post in posts -%}
                 <div class="posts__item grid">
-                    <div class="posts__item-image grid__col--vcentered grid__col-4">
+                    <div class="posts__item-image grid__col--vcentered grid__col-hidden-md grid__col-4-md">
                         <a href="{{ post.url }}">
                             {% if post.data.image %}
                                 <img src="{{ post.url }}{{ post.data.image }}" alt="" />
@@ -38,7 +38,7 @@ sitemap:
                             {% endif %}
                         </a>
                     </div>
-                    <div class="posts__item-text grid__col--vcentered grid__col-8">
+                    <div class="posts__item-text grid__col--vcentered grid__col-12 grid__col-8-md">
                         <header class="posts__item-header">
                             <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
                             <div class="post__meta">
