Blog update - Only show tags in blog tag navigation that have at least one post (consider drafts) - Updated blog entry

--- a/src/blog.html
+++ b/src/blog.html
@@ -19,7 +19,9 @@ sitemap:
         <aside class="floating-nav">
             <ul>
                 {% for tag in collections.alltags %}
-                    <li><a href="{{ '/tag/' + tag.name }}">#{{ tag.name }} ({{ tag.posts }})</a></li>
+                    {% if tag.posts > 0 %}
+                        <li><a href="{{ '/tag/' + tag.name }}">#{{ tag.name }} ({{ tag.posts }})</a></li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         </aside>
