Responsivness, Changed Blog Dates, Changed About Picture

--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@ sitemap:
     <div class="section__content">
         <div class="grid">
             <div class="grid__col-12 grid__col-4-sm grid__col-5-md align-c">
-                <img src="/assets/images/me.jpg" alt="" />
+                <img src="/assets/images/me-gradient.png" alt="" />
             </div>
             <div class="grid__col-12 grid__col-8-sm grid__col-7-md grid__col--vcentered">
                 <h3>Hi, my name is Max.</h3>
