--- a/src/about.html
+++ b/src/about.html
@@ -22,6 +22,7 @@ sitemap:
                 <p>Besides programming web-applications I do a lot of other things. You can read more about my hobbies <a href="/hobbies" class="link">over here</a>.</p>
                 <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials below or on my <a href="/beacons" class="link">beacons page</a></p>
                 <p class="align-c">
+                    <a href="{{ '/tierlist' | url }}" class="button button--primary">Tierlist</a>
                     <a href="{{ '/cv' | url }}" class="button button--primary">Full CV</a>
                 </p>
             </div>
