--- a/src/cv.html
+++ b/src/cv.html
@@ -4,7 +4,7 @@ title: Curriculum Vitae
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="{{ '/about' | url }}"><span>履歴書・</span>Curriculum Vitae</a></h1>
+        <h1><span>履歴書・</span><a href="{{ '/about' | url }}">Curriculum Vitae</a></h1>
         <h2>How I got where I am</h2>
 
         <hr>
