--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -5,15 +5,15 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1><a href="/"><span>趣・</span>Hobbies</a></h1>
+        <h1><span>趣・</span><a href="/">Hobbies</a></h1>
         <h2>Jack of all&mdash;Ace of none</h2>
 
         <aside class="floating-nav">
             <ul>
-                <li><a href="#japanese">Japanese</a></li>
-                <li><a href="#magic">Magic</a></li>
-                <li><a href="#programming">Programming</a></li>
-                <li><a href="#speedcubing">Speedcubing</a></li>
+                <li><a href="#japanese" class="floating-nav__link">Japanese</a></li>
+                <li><a href="#magic" class="floating-nav__link">Magic</a></li>
+                <li><a href="#programming" class="floating-nav__link">Programming</a></li>
+                <li><a href="#speedcubing" class="floating-nav__link">Speedcubing</a></li>
                 {# <li><a href="#running">Scuba Diving</a></li> #}
                 {# <li><a href="#running">Running</a></li> #}
             </ul>
@@ -38,40 +38,40 @@ layout: base.njk
                     <h4>Websites</h4>
 
                     <ul class="fs-sm">
-                        <li><a href="http://jisho.org/" class="link" target="_blank">Jisho</a></li>
-                        <li><a href="https://www.superprof.de/" class="link" target="_blank">Superprof</a></li>
-                        <li><a href="https://www.wanikani.com/" class="link" target="_blank">WaniKani</a></li>
+                        <li><a href="http://jisho.org/" target="_blank">Jisho</a></li>
+                        <li><a href="https://www.superprof.de/" target="_blank">Superprof</a></li>
+                        <li><a href="https://www.wanikani.com/" target="_blank">WaniKani</a></li>
                     </ul>
                 </div>
                 <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Tools</h4>
                     
                     <ul class="list fs-sm">
-                        <li><a href="https://ankiweb.net/" class="link" target="_blank">Anki</a></li>
-                        <li><a href="https://www.duolingo.com/" class="link" target="_blank">Duolingo</a></li>
-                        <li><a href="https://www.hellotalk.com/" class="link" target="_blank">HelloTalk</a></li>
-                        <li><a href="https://www.memrise.com/" class="link" target="_blank">memrise</a></li>
-                        <li><a href="https://www.tandem.net/" class="link" target="_blank">Tandem</a></li>
+                        <li><a href="https://ankiweb.net/" target="_blank">Anki</a></li>
+                        <li><a href="https://www.duolingo.com/" target="_blank">Duolingo</a></li>
+                        <li><a href="https://www.hellotalk.com/" target="_blank">HelloTalk</a></li>
+                        <li><a href="https://www.memrise.com/" target="_blank">memrise</a></li>
+                        <li><a href="https://www.tandem.net/" target="_blank">Tandem</a></li>
                     </ul>
                 </div>
                 <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Movies / Series</h4>
 
                     <ul class="list fs-sm">
-                        <li><a href="https://www.imdb.com/title/tt3958276/" class="link" target="_blank">Midnight Diner</a></li>
-                        <li><a href="https://www.imdb.com/title/tt7776244/" class="link" target="_blank">Terrace House</a></li>
+                        <li><a href="https://www.imdb.com/title/tt3958276/" target="_blank">Midnight Diner</a></li>
+                        <li><a href="https://www.imdb.com/title/tt7776244/" target="_blank">Terrace House</a></li>
                     </ul>
                 </div>
                 <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>YouTube</h4>
 
                     <ul class="list fs-sm">
-                        <li><a href="https://www.youtube.com/channel/UCtXLFX-1PwTDndWaC-5y_3g" class="link" target="_blank">Dominik Wallner</a></li>
-                        <li><a href="https://www.youtube.com/c/GeorgeJapan" class="link" target="_blank">George</a></li>
-                        <li><a href="https://www.youtube.com/c/JunsKitchen" class="link" target="_blank">JunsKitchen</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCTcsUriABcZ1I5pbA38x30A" class="link" target="_blank">マックス Makkusu</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCsVBw4Uis3W2OUEQYWg3XDQ" class="link" target="_blank">Mr. Nippon</a></li>
-                        <li><a href="https://www.youtube.com/c/NihonGoo" class="link" target="_blank">NihonGo</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCtXLFX-1PwTDndWaC-5y_3g" target="_blank">Dominik Wallner</a></li>
+                        <li><a href="https://www.youtube.com/c/GeorgeJapan" target="_blank">George</a></li>
+                        <li><a href="https://www.youtube.com/c/JunsKitchen" target="_blank">JunsKitchen</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCTcsUriABcZ1I5pbA38x30A" target="_blank">マックス Makkusu</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCsVBw4Uis3W2OUEQYWg3XDQ" target="_blank">Mr. Nippon</a></li>
+                        <li><a href="https://www.youtube.com/c/NihonGoo" target="_blank">NihonGo</a></li>
                     </ul>
                 </div>
             </div>
