--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@ sitemap:
         <a href="{{ '/hobbies' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
     </div>
     <div class="hub__col">
-        <div class="hub__title">マックス</div>
+        <div class="hub__title">マックス<span>.dev</span></div>
     </div>
     <div class="hub__col hub__col--wide">
         <a href="{{ '/blog' | url }}" class="hub__link" data-kanji="3">Blog</a>
-        <a href="#" class="hub__link hub__link--locked" data-kanji="4" title="soon&hellip;">&nbsp;Projects&nbsp;</a>
+        <a href="{{ '/coding' | url }}" class="hub__link" data-kanji="4">Coding</a>
     </div>
     
     <div class="hub__kanji" data-kanji="1">私</div>
