--- a/src/tag.html
+++ b/src/tag.html
@@ -18,7 +18,7 @@ layout: base
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1><a href="{{ '/blog' | url }}"><span>書・</span>Blog</a></h1>
+        <h1><span>書・</span><a href="{{ '/blog' | url }}">Blog</a></h1>
         <h2>All posts tagged with <span>#{{ tag }}</span></h2>
     </div>
 
