--- a/src/tierlist.html
+++ b/src/tierlist.html
@@ -7,7 +7,7 @@ sitemap:
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="{{ '/about' | url }}"><span>上・</span>Tierlist</a></h1>
+        <h1><span>上・</span><a href="{{ '/about' | url }}">Tierlist</a></h1>
         <h2>My top X for each category</h2>
     </div>
 
