--- a/src/404.html
+++ b/src/404.html
@@ -6,14 +6,14 @@ eleventyExcludeFromCollections: true
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="/"><span>何・</span>404 Not Found</a></h1>
+        <h1><span>何・</span><a href="/">404 Not Found</a></h1>
         <h2>Oops, something went wrong</h2>
     </div>
         
     <div class="section__content section__content--narrow align-c">
         <p>
             The page you are looking for does not or no longer exist.<br />
-            Please check the URL for mistakes or go back to <a href="{{ '/' | url }}" class="link">the main page</a>.
+            Please check the URL for mistakes or go back to <a href="{{ '/' | url }}">the main page</a>.
         </p>
         <p>
             The current URL:<br />
