--- a/src/imprint.html
+++ b/src/imprint.html
@@ -15,8 +15,8 @@ title: Impressum
         <p>
             Maximilian Boll<br />
             Mainz, Germany<br />
-            Mail: <a href="mailto:legal@makkusu.dev" class="link" rel="nofollow">legal@makkusu.dev</a><br />
-            Twitter: <a href="https://twitter.com/MyXoToD" class="link" target="_blank" rel="nofollow">@MyXoToD</a>
+            Mail: <a href="mailto:legal@makkusu.dev" rel="nofollow">legal@makkusu.dev</a><br />
+            Twitter: <a href="https://twitter.com/MyXoToD" target="_blank" rel="nofollow">@MyXoToD</a>
         </p>
 
         <hr>
@@ -24,7 +24,7 @@ title: Impressum
         <h2>Privacy information</h2>
 
         <p>This website does not use any kind of tracking or analytic tools. Server settings for any kind of logs are turned off.</p>
-        <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" class="link" rel="nofollow">GitHub</a>.</p>
+        <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" rel="nofollow">GitHub</a>.</p>
 
         <hr>
 
