--- a/src/coding.html
+++ b/src/coding.html
@@ -12,14 +12,15 @@ layout: base.njk
     <div class="section__content section__content--wide">
         <div class="project">
             <div class="project__preview">
-                <img src="https://codepen.io/MyXoToD/pen/VwQmQem/image/large.png" alt="" />
+                <img src="/assets/images/coding/maze-generator.png" alt="" />
             </div>
             <div class="project__details">
-                Hello World
+                <div class="project__subtitle">Randomized Prim&rsquo;s & A* algorithm</div>
+                <h3 class="project__title">Maze Generator</h3>
                 <div class="project__highlight">
-                    This is a title
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sapiente tempora tenetur veritatis exercitationem odit. Omnis eveniet magnam rem dolorem pariatur corrupti veritatis, cum aperiam recusandae! Modi iste repellat necessitatibus.
                 </div>
-                meta meta meta
+                <div class="project__meta">15. May 2022</div>
             </div>
         </div>
 
@@ -28,9 +29,9 @@ layout: base.njk
                 <img src="https://codepen.io/MyXoToD/pen/ExQgKQW/image/large.png" alt="" />
             </div>
             <div class="project__details">
-                Hello World
+                Maze Generator
                 <div class="project__highlight">
-                    This is a title
+                    Maze Generator
                 </div>
                 meta meta meta
             </div>
