--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -37,7 +37,7 @@ layout: base.njk
                 <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
                     <h4>Websites</h4>
 
-                    <ul class="fs-sm">
+                    <ul class="list fs-sm">
                         <li><a href="http://jisho.org/" target="_blank">Jisho</a></li>
                         <li><a href="https://www.superprof.de/" target="_blank">Superprof</a></li>
                         <li><a href="https://www.wanikani.com/" target="_blank">WaniKani</a></li>
