Updated tierlist information

--- a/src/tierlist.html
+++ b/src/tierlist.html
@@ -22,9 +22,9 @@ sitemap:
                     <li>Fight Club</li>
                     <li>Green Mile</li>
                     <li>The Professional</li>
+                    <li>Matrix</li>
                     <li>千と千尋の神隠し</li>
-                    <li></li>
-                    <li></li>
+                    <li>Rollerball</li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -36,10 +36,10 @@ sitemap:
 
                 <ol class="list ff-sans">
                     <li>Sense8</li>
-                    <li>Game of Thrones</li>
+                    <li>Love, Death & Robots</li>
                     <li>Archer</li>
                     <li>Black Mirror</li>
-                    <li>Love, Death & Robots</li>
+                    <li>Game of Thrones</li>
                     <li></li>
                     <li></li>
                     <li></li>
