Content update 11ty update

--- a/src/about.html
+++ b/src/about.html
@@ -20,7 +20,7 @@ sitemap:
                 <h3>Hi, my name is Max.</h3>
                 <p>I&rsquo;m a German based web-developer. Currently <span class="age">28</span> years old and living in the beautiful city of Mainz.</p>
                 <p>Besides programming web-applications I do a lot of other things. You can read more about my hobbies <a href="/hobbies">over here</a>.</p>
-                <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials below or on my <a href="/beacons">beacons page</a></p>
+                <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials on my <a href="/beacons">beacons page</a></p>
                 <p class="align-c">
                     <a href="{{ '/tierlist' | url }}" class="button button--primary">Tierlist</a>
                     <a href="{{ '/cv' | url }}" class="button button--primary">Full CV</a>
