--- a/src/beacons.html
+++ b/src/beacons.html
@@ -11,7 +11,7 @@ title: Beacons
         <a href="https://www.youtube.com/user/MyXoToD" class="beacons__beacon"><span class="icofont-youtube" style="--color:#FF0000"></span> @MyXoToD</a>
         <a href="https://open.spotify.com/user/1145610126?si=c5f118e34d8941f4" class="beacons__beacon"><span class="icofont-spotify" style="--color:#1DB954"></span> @Max</a>
         <a href="https://stackoverflow.com/users/2783423/myxotod" class="beacons__beacon"><span class="icofont-stack-overflow" style="--color:#F48024"></span> @MyXoToD</a>
-        <a href="https://steamcommunity.com/id/4lienb0y" class="beacons__beacon"><span class="icofont-steam" style="--color:#FFFFFF"></span> @4lien</a>
+        {#% <a href="https://steamcommunity.com/id/4lienb0y" class="beacons__beacon"><span class="icofont-steam" style="--color:#FFFFFF"></span> @4lien</a> %#}
         <a href="https://github.com/MyXoToD" class="beacons__beacon"><span class="icofont-github" style="--color:#FFFFFF"></span> @MyXoToD</a>
     </div>
 </div>
