--- a/src/cv.html
+++ b/src/cv.html
@@ -6,14 +6,12 @@ title: Curriculum Vitae
     <div class="section__content section__content--wide align-c">
         <h1><span>履歴書・</span><a href="{{ '/about' | url }}">Curriculum Vitae</a></h1>
         <h2>How I got where I am</h2>
-
-        <hr>
     </div>
 
     <div class="section__content section__content--narrow">
         <h2>Introduction</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam molestiae repudiandae beatae ratione iste ducimus debitis alias illum aperiam fuga, odit minima distinctio consequuntur molestias aliquam libero consequatur eos inventore.</p>
+        <p>A diligent and enthusiastic frontend web developer with more than 15 years of professional experience. Solving problems with elegant, responsive and user friendly interfaces is my goal.</p>
     </div>
 
     <div class="section__content section__content--wide">
@@ -35,7 +33,7 @@ title: Curriculum Vitae
                 <ul class="list ff-sans">
                     <li>German (C2/native)</li>
                     <li>English (C2)</li>
-                    <li>Japanese (A1/A2)</li>
+                    <li>Japanese (JLPT N5)</li>
                 </ul>
             </div>
             <div class="grid__col-12 grid__col-4-sm">
@@ -50,18 +48,19 @@ title: Curriculum Vitae
                 </ul>
             </div>
         </div>
-
-        <hr>
-
-        <h2 class="align-c">References / Customers</h2>
-
-        <p class="align-c">logos</p>
     </div>
 
     <div class="section__content section__content--narrow">
         <h2>Experience / Work</h2>
 
         <div class="timeline">
+            <div class="timeline__entry" data-label="September 2022">
+                <strong>Frontend-Developer @ Comdesk GmbH</strong>
+                <ul>
+                    <li>Maintaining company website & products</li>
+                    <li>HTML, CSS, JS, PHP</li>
+                </ul>
+            </div>
             <div class="timeline__entry" data-label="June 2021">
                 <strong>Frontend-Developer @ CallOne GmbH</strong>
                 <ul>
