--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -27,54 +27,8 @@ layout: base.njk
             </div>
 
             <p>In october 2020 I started learning Japanese. Besides learning Hiragana and Katakana, I used apps like memrise to get basic vocabulary. After feeling confident with most of the Kana, I started creating my own Anki decks and started using more apps. A list of all apps, websites and others tools I used to study you can find below.</p>
-            <p class="align-c">
-                <a href="/tag/japanese" class="button button--primary">Blog-Posts about Japanese</a>
-            </p>
 
-            <p>If you're interested in learning Japanese or looking for additional help, I compiled a list of other useful information and tools for learning and immersion. Feel free to dig around.</p>
-            
-            <div class="grid" style="--gutter: 2px;">
-                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
-                    <h4>Websites</h4>
-
-                    <ul class="list fs-sm">
-                        <li><a href="http://jisho.org/" target="_blank">Jisho</a></li>
-                        <li><a href="https://www.superprof.de/" target="_blank">Superprof</a></li>
-                        <li><a href="https://www.wanikani.com/" target="_blank">WaniKani</a></li>
-                    </ul>
-                </div>
-                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
-                    <h4>Tools</h4>
-                    
-                    <ul class="list fs-sm">
-                        <li><a href="https://ankiweb.net/" target="_blank">Anki</a></li>
-                        <li><a href="https://www.duolingo.com/" target="_blank">Duolingo</a></li>
-                        <li><a href="https://www.hellotalk.com/" target="_blank">HelloTalk</a></li>
-                        <li><a href="https://www.memrise.com/" target="_blank">memrise</a></li>
-                        <li><a href="https://www.tandem.net/" target="_blank">Tandem</a></li>
-                    </ul>
-                </div>
-                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
-                    <h4>Movies / Series</h4>
-
-                    <ul class="list fs-sm">
-                        <li><a href="https://www.imdb.com/title/tt3958276/" target="_blank">Midnight Diner</a></li>
-                        <li><a href="https://www.imdb.com/title/tt7776244/" target="_blank">Terrace House</a></li>
-                    </ul>
-                </div>
-                <div class="grid__col-12 grid__col-6-sm grid__col-3-md">
-                    <h4>YouTube</h4>
-
-                    <ul class="list fs-sm">
-                        <li><a href="https://www.youtube.com/channel/UCtXLFX-1PwTDndWaC-5y_3g" target="_blank">Dominik Wallner</a></li>
-                        <li><a href="https://www.youtube.com/c/GeorgeJapan" target="_blank">George</a></li>
-                        <li><a href="https://www.youtube.com/c/JunsKitchen" target="_blank">JunsKitchen</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCTcsUriABcZ1I5pbA38x30A" target="_blank">マックス Makkusu</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCsVBw4Uis3W2OUEQYWg3XDQ" target="_blank">Mr. Nippon</a></li>
-                        <li><a href="https://www.youtube.com/c/NihonGoo" target="_blank">NihonGo</a></li>
-                    </ul>
-                </div>
-            </div>
+            <p>If you're interested in learning Japanese or looking for additional help, I will compile a list of other useful information and tools for learning and immersion. This list will be published here in the future.</p>
         </div>
 
         <div class="hobby" id="magic">
